--- a/apps/nx-monorepo-angular-app/src/app/app.component.html
+++ b/apps/nx-monorepo-angular-app/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div class="min-h-screen flex flex-col justify-center items-center gap-y-4">
-  <button
-    (click)="toggleDarkMode()"
-    id="dark-mode-toggle"
-    class="
+  <button (click)="pingServer()" class="
       bg-blue-500
       dark:bg-blue-800
       hover:bg-blue-700
@@ -13,11 +10,10 @@
       py-2
       px-4
       rounded
-    "
-  >
-    Toggle
+    ">
+    Ping
   </button>
   <p class="text-black dark:text-white">
-    Dark mode enabled: {{ (darkModeEnabled$ | async) === true }}
+    {{ (serverResponse$ | async) }}
   </p>
 </div>
